--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <a href = "IT_tech_cybersecurity.html">Cyber Security</a>
             <a href = "IT_tech_machinelearning.html">Machine Learning</a>
             <a href = "IT_tech_robots.html">Robots</a>
+            <a href = "IT_tech_clouds_servers.html">Clouds, Services and Servers</a>
            
         </div> 
     </div>
@@ -57,6 +58,7 @@
             <a href = "IT_tech_machinelearning_references.html">Machine Learning</a>
             <a href = "Industry_data_references.html">Industry Data</a>
             <a href = "Project_idea_references.html">Project Idea</a>
+            <a href = "IT_tech_clouds_references.html">Clouds, Services and Servers</a>
                 
         </div> 
     </div>
