updated all pages
added links to Cloud references and cloud IT tech pages to all headings.

--- a/IT_tech_clouds_servers.html
+++ b/IT_tech_clouds_servers.html
@@ -65,7 +65,7 @@
 
 <!-- page heading-->
     <div class = "main-text">
-        <h2>Robots</h2>
+        <h2>Clouds, Services and Servers </h2>
     <h3>Prepared by: Sean De Chavez</h3><hr>
     
     </div>
