--- a/IT_tech_clouds_references.html
+++ b/IT_tech_clouds_references.html
@@ -64,8 +64,8 @@
 
 <!-- page heading-->
     <div class = "main-text">
-        <h2>Machine Learning</h2>
-    <h3>Prepared by: Joshua M<sup>c</sup>Corkell</h3><hr>
+        <h2>Clouds, Services and Servers </h2>
+    <h3>Prepared by: Sean De Chavez</h3><hr>
     
     </div>
 
