--- a/Project_idea.html
+++ b/Project_idea.html
@@ -82,49 +82,71 @@
 
 <img src = "images/Cyclopedia_2.png" alt = "Cyclopedia logo" class = "figure-style" style = "width:350px;height:300px;">
 
-<p>In this ongoing climate and - more recently, health – emergency, more commuters than ever are rediscovering the joy that is getting around our cities by bicycle. However, Australian cities are unfortunately lacking in safe cycling infrastructure that enables new riders to hit the streets and get where they need to go in a comfortable and timely manner. A searchable database of bicycle lanes in our cities, including photos, user reviews and condition reports would be an extremely useful tool in planning a safe commuting route on any given day. </p>
+<p>In this ongoing climate and - more recently, health – emergency, more commuters than ever are rediscovering the joy that is getting around our cities by bicycle (CWANZ 2021). However, Australian cities are unfortunately lacking in safe cycling infrastructure that enables new riders to hit the streets and get where they need to go in a comfortable and timely manner (Pearson and Beck 2022). A searchable database of bicycle lanes in our cities, including photos, user reviews and condition reports would be an extremely useful tool in planning a safe commuting route on any given day. </p>
 
 <p><b>Motivation</b></p>
-<p>The primary solution for those seeking routes is to contact their local commuter cycling group for advice, followed by Google Maps – the former relying on community posts online, and the latter potentially providing incorrect, unsafe, or busy routing. Currently, motorists have access to free real-time traffic reports and routing not only with Google Maps but also government-managed resources such as Transport for NSW’s Live Traffic app – which is updated regularly with roadwork, incidents and more by staff at the Transport Management Centre in Sydney. 
-
-    A searchable database of bicycle lanes with crowdsourced condition updates would provide a means of routing comparable to using Transport for NSW’s Live Traffic app and make bicycle commuting a more attractive option</p>
+<p>The primary solution for those seeking routes is to contact their local commuter cycling group for advice, followed by Google Maps – the former relying on community posts online, and the latter potentially providing incorrect, unsafe, or busy routing. Currently, motorists have access to free real-time traffic reports and routing not only with Google Maps but also government-managed resources such as Transport for NSW’s Live Traffic app – which is updated regularly with roadwork, incidents and more by staff at the Transport Management Centre in Sydney. <br>
+A searchable database of bicycle lanes with crowdsourced condition updates would provide a means of routing comparable to using Transport for NSW’s Live Traffic app and make bicycle commuting a more attractive option. </p>
 
 <p><b>Description</b></p>
-<p>In the project’s final form, a user will be able to visit a website or download a mobile phone application to access a searchable database of bicycle lanes or view them on a map. 
-
+    <p>In the project’s final form, a user will be able to visit a website or download a mobile phone application to access a searchable database of bicycle lanes or view them on a map.<br> 
     Bicycle lanes will be categorised based on several factors, such as: </p>
-    <ul>
-        <li>Ride quality (surface type; maintenance issues) </li>
-        <li>Safety (lighting; visibility to other road users) </li>
-        <li>Positioning (off-road cycleway in a quiet park; or narrow lane next to car doors?)  </li>
-        <li>Hazards (construction work; slippery leaves in Autumn)  </li>
-        <li>Priority given (Do I need to stop frequently?) </li>
-        <li>Speed (How fast do I feel comfortable riding?) </li>
-        <li>Width (Australian standard or Dutch standard?) </li>
-    </ul>
+        <ul>
+            <li>Ride quality (surface type; maintenance issues) </li>
+            <li>Safety (lighting; visibility to other road users) </li>
+            <li>Positioning (off-road cycleway in a quiet park; or narrow lane next to car doors?)  </li>
+            <li>Hazards (construction work; slippery leaves in Autumn)  </li>
+            <li>Priority given (Do I need to stop frequently?) </li>
+            <li>Speed (How fast do I feel comfortable riding?) </li>
+            <li>Width (Australian standard or Dutch standard?) </li>
+        </ul>
     <p>Users will not only be able to view this data – they will have the opportunity to check-in to bicycle lanes and leave a short review with real-time ratings for key data metrics as above. This functionality will be similar to the website and app PlugShare, which enables electric vehicle owners to find chargers, check-in when in use and leave a review or even a simple note advising other EV owners the current status of a given charging station. </p>
 
-    <p>Crowdsourced data could potentially be monetised and sold onto councils and other infrastructure stakeholders such as Transport for NSW, as statistics such as those gathered by this application are extremely valuable in determining maintenance issues that otherwise go unnoticed, or where to install upgrades to the infrastructure. Data could also be used to aid step-by-step navigation with safer cycling routes to their destination. </p>
+    <p>Crowdsourced data could potentially be monetised and sold to councils and other infrastructure stakeholders such as Transport for NSW, as statistics such as those gathered by this application are extremely valuable in determining maintenance issues that otherwise go unnoticed, or where to install upgrades to the infrastructure. Data could also be used to aid step-by-step navigation with safer cycling routes to their destination. </p>
 
     <p>There is also scope to expand the project to include other useful points of interest to bicycle riders, such as the location and availability of parking with imagery. </p>
 
-    <p><b>Tools and Technology</b></p>
+<p><b>Tools and Technology</b></p>
+
     <p>Initially, the ‘application’ may consist of a simple Google My Maps document with annotations on a map – however moving forward the application will be accessed via a web browser, or through a downloadable mobile phone application published on the Apple App Store or Google Play Store. </p>
     
-    <p>The web application will require a modern browser such as Apple’s Safari or Google Chrome to run. The mobile phone applications will require a modern smartphone on the most recent relevant operating system to run. The mobile phone applications would make use of modern mapping APIs, using either Apple Maps or Google Maps depending on the platform, although other cross-platform alternatives exist such as OpenStreetMap or Mapbox should the need arise. </p>
+    <p>The web application will require a modern browser such as Apple’s Safari or Google Chrome to run. The mobile phone applications will require a modern smartphone on the most recent relevant operating system to run. Both the mobile and web applications would utilise modern mapping APIs to display familiar, user-friendly map images. On iOS, Apple’s MapKit can be used on-device at no extra cost. Similarly, on Android, Google Maps’ API can be used in-app for no extra cost provided the application is available for free on the Google Play Store. On the web, Apple’s MapKit JS is available for no extra cost up to 25,000 service calls, along with Mapbox which is free to the same number of service calls. </p>
 
-    <p>The application will require a cloud server to accommodate the large amount of data it is expected to host, and to handle the storage of user reviews and information. </p>
+    <p>The application will require a cloud server to accommodate the large amount of data it is expected to host, and to handle the storage of user reviews and information. Possible options include Amazon Web Services or Google Cloud Platform. </p>
 
-    <p>To build the mobile applications, an Apple Mac computer is required for development and testing purposes on both mobile platforms. </p>
+    <p>The web application will need to be designed using HTML/CSS for the layout, possibly including a front-end framework like Bootstrap5 or SASS. For the front-end scripting, JavaScript would be used, possibly also incorporating frameworks and libraries like jQuery, Angular, React, or Vue.js. Depending on the cloud services being used, a server-side language or framework like Node.js or PHP may be required. An IDE such as Visual Studio, or VS Code will also be used. </p>
+
+    <p>An Apple Mac computer is required for development and testing purposes for the iOS application. Programming languages such as Objective-C or Swift would be used to program the app, and Apple’s iOS developer tools would need to be used for development. These tools primarily include the XCode IDE and possibly XCode Cloud which can be used for development in teams. A US$99 fee applies to access the Apple Developer Program, which is required to publish applications to the App Store. </p>
+
+    <p>Similarly, for an Android version of the application tools like Android Studio or IntelliJ IDEA would need to be used for the development of the app. It would likely be programmed in Kotlin or Java, which are the best and most popular programming languages for Android app development. A system like Gradle would be used to manage and build the project, and other tools like Vysor could be used for testing the app, or Firebase for things such as user authentication and information syncing (Demchenko 2020). Google also requires a fee of US$25 to register for use of the Google Play Console, which allows developers to publish to the Google Play Store. However, unlike iOS, it is possible for the Android application to be installed manually (sideloaded) by downloading the package from the website, however this has serious user experience and security concerns. </p>
+
 
 
 <p><b>Skills</b></p>
 
-<p>The web application will require familiarisation with the latest web technologies such as HTML5, CSS3 and JavaScript. The iPhone application will require familiarisation with Objective-C or Swift, XCode software, and the use of Apple’s developer tools. The Android application will require familiarisation with Java, Android Studio software and the use of Google’s developer tools. The application will also require familiarisation with a cloud platform such as Amazon Web Services. </p>
+    <p>This application will require experience using a cloud platform like AWS or Google Cloud for the back-end servers and data storage, as mentioned above. </p>
+
+    <p>For building the web version of the application, experience with the chosen web frameworks and programming languages will be required. Skills using IDEs such as Visual Studio or VS Code will also be important. </p>
+
+    <p>The iOS application will require skills in using languages such as Objective-C and/or Swift for writing the software, and extensive use of Apple’s iOS developer tools such as XCode and XCode Cloud for development.</p>
+
+    <p>The Android application will require skills working with Kotlin, Java, or a related language for writing the code, as well as an IDE such as Android Studio or IntelliJ IDEA for development. Skills using other Android development tools such as Gradle, Vysor, or Firebase could also be extremely useful. </p>
+
+    <p>If the project were to grow and become more popular, staff would need to be hired with skills for jobs like customer service, moderation, and similar roles. </p>
+
+<p><b>Costing </b></p>
+
+    <p>The below table lists some expected expenses to be incurred should this project go ahead: </p>
+
+
+
+
+
+
 
 <p><b>Outcome</b></p>
 
-<p>The desired outcome of this application is an increased uptake of commuter cycling and a greater sense of safety given to users of the application as they would be more likely to be aware of hazards ahead of time. The data provided by users of the application could also be utilised by those who maintain the infrastructure to provide a higher quality of service to bicycle riders comparable to that experienced by motorists. </p>
+<p>The desired outcome of this application is an increased uptake of commuter cycling, as this application can help mitigate many of the problems associated with cycling. It will also bring a greater sense of safety given to users of the application, as they would be more likely to be aware of hazards ahead of time. In addition, they will have the opportunity to be able to plan their cycling commutes with a greater degree of certainty more comparable to travelling by car or public transport. The data provided by users of the application could also be utilised by those who maintain and upgrade the infrastructure to provide a higher quality of service to bicycle riders comparable to that experienced by motorists.  </p>
 
 
 <br>
