updates home page,
formatting

--- a/Project_idea.html
+++ b/Project_idea.html
@@ -68,6 +68,8 @@
 <!-- page heading-->
     <div class = "main-text">
           <h2>Project Idea</h2>
+          <h3>Prepared by : Aiden Howlett</h3>
+          
 
     <hr>   
     </div>
@@ -76,6 +78,7 @@
 <!--body class = "main-text"-->
     <div class = "main-text">
 <p><b>Overview</b></p>
+
 
 <img src = "images/Cyclopedia_2.png" alt = "Cyclopedia logo" class = "figure-style" style = "width:350px;height:300px;">
 
