--- a/index.html
+++ b/index.html
@@ -69,10 +69,6 @@
    
 <div class = "main-text">
 
-    <h2>A Group Profile:</h2> 
-        <p>Individual profiles can be found in the Team profile links above.
-            This information could be helpful to the group because it can increase our understanding of each other and help us achieve clear and effective communication. This understanding of each other is important as before now we have never met each other and being able to work together efficiently as a group is one of the most important parts of success in this assignment. 
-        </p>
         <h2>In Control, Totally </h2>
   <h3>Prepared by: Adam Puckeridge, Aiden Howlett, Helen Andrews, Joshua McCorkell, Robert Longmore and Sean De Chavez </h3>
 
@@ -85,7 +81,13 @@
      <h3><a href = "https://github.com/aidenh37/RMIT-COSC2196-IIT-A2">GitHub Repository</a></h3>
 
      <h3><a href = "https://aidenh37.github.io/RMIT-COSC2196-IIT-A2">GitHub Website</a></h3>
- 
+
+     <h3>Website Prepared by : Robert Longmore</h3>
+
+     <h2>A Group Profile:</h2> 
+     <p>Individual profiles can be found in the Team profile links above.
+         This information could be helpful to the group because it can increase our understanding of each other and help us achieve clear and effective communication. This understanding of each other is important as before now we have never met each other and being able to work together efficiently as a group is one of the most important parts of success in this assignment. 
+     </p>
 
   </div>
 <!--footer-->
