updated IT work,
added image Woolworth corporate and atribute

--- a/IT_work.html
+++ b/IT_work.html
@@ -68,6 +68,12 @@
     <div class = "main-text">
         <h2>IT Work</h2>
     <h3>Interview with an IT Professional. </h3><hr>
+
+    <figure class = "figure-style-40">
+        <img src="images/Woolworths_Group.png" width="100%" alt="Woolworths group logo">
+            <figcaption>Woolworths Group <a href = "https://www.woolworthsgroup.com.au/img/logo.svg"> Woolworth corporate logo</a></figcaption>
+    </figure>
+    
     <p>As a group, we interviewed Sally Longmore, as she works with Woolworths Group as Digital Product Lead. </p>
     <p>Sally’s role at Woolworths Group is Digital Product Lead, which means she is a lead engineer in her group, and her role often extends to designing how systems and solutions are implemented in their environment. The role includes a lot of documentation, scripting and coding, and also requires her to understand the company infrastructure. The role also includes things like OS deployment, configuration management, and learning new skills such as container management. </p>
 
