--- a/meetings_recordings.html
+++ b/meetings_recordings.html
@@ -72,20 +72,16 @@
 <!--horizontal line-->
 
 <p><b>Meetings held </b></p>
-<p>Seven meetings were held as this report was produced. Each meeting was recorded, automatically transcribed, and has a relevant agenda and actions document. 
-  Meeting agendas and actions have been consolidated into a single document, accessible here: </p>
-  <P><ol>
-    <li>26/06/22</li>
-    <li>30/06/22</li>
-    <li>5/7/22</li>
-    <li>7/7/22</li>
-    <li>12/7/22</li>
-    <li>12/7/22</li>
-  </ol></P>
-
-    <p>1st meeting. Getting Started</p>
+<p>Seven meetings were held as this report was produced. Each meeting was recorded, automatically transcribed, and has a relevant agenda and actions document, 
+  accessible below the video recordings </p>
+  <hr>
+  
+    <p>1st meeting. 26-06-2022. Getting Started. </p>
    
     <iframe width="560" height="315" src="https://www.youtube.com/embed/xrP4VXSXDZ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <p><a href = "documents/meeting1Agenda.pdf"><b>Agenda.pdf</b></a></p>
+    <p><a href = "documents/1st_meetingActions.pdf"><b>Actions.pdf</b></a></p>
     <hr>
 
 <p>2nd meeting. Plan of the Century</p>
