updated Cyber security references
added new updated references,  has to be alphabetically ordered.

--- a/IT_work.html
+++ b/IT_work.html
@@ -77,7 +77,8 @@
         <figcaption>Sally and Gregills the Robot that looks for spills and tripping hazards (Longmore 2021).</figcaption>
         <br>
         <img src="images/Woolworths_ESL2.jpg" width="100%" alt="Electronic Shelf Labels">
-        <figcaption>Electonic Shelf Labels are e-ink displays that show the current price of an item.(Longmore 2021).</figcaption>
+        <figcaption>Electronic Shelf Labels are e-ink displays that show the current price of an item.(Longmore 2021).</figcaption>
+        <br>
         <img src="images/Woolworths_Online.jpg" width="100%" alt="Electronic Shelf Labels">
         <figcaption>Robotic vertical storage for online orders.(Longmore 2021).</figcaption>
     </figure>
@@ -92,7 +93,7 @@
 
     <p>Being able to learn quickly is an important skill in this position, because the various stakeholders are all after different things, and are always trying to do something new. In addition, an important factor there are always stakeholders sponsoring and requesting new projects and solutions, and there are stakeholders who are accountable for these projects being completed. </p>
 
-    <p>Sally spends most of her time working from home, which she enjoys far more than working in an office. Occasionally, a visit to the office to work in the lab is a necessity, however. She has found working from home boosts her productivity, in addition to being more enjoyable and comfortable, especially for someone who has an introverted personality.</p> 
+    <p>Sally spends most of her time working from home, which she enjoys far more than working in an office. Occasionally, a visit to the office to work in the lab is a necessity. She has found working from home boosts her productivity, in addition to being more enjoyable and comfortable, especially for someone who has an introverted personality.</p> 
     
     <p>In terms of what projects and tasks she spends most of her time on, at the moment, approximately 80% of her time is spent programming for a complex project that involves PowerShell scripts that need to make robust decisions. Generally, however, much of her work involves documentation, which she says is one of the most important parts of IT. Everything must be documented to the level that someone else could come and pick that up where it was left off, especially in the case of someone getting sick or leaving the company, etc. This is especially important if there is any programming involved. According to Sally, “Documentation is extremely important […] It’s great if your code works, but if I can’t understand it, then it’s useless to me.” </p> 
 
@@ -101,8 +102,7 @@
     <p>Sally tells us that the most challenging part of her job is working with others. In an organisation the size of Woolworths Group, many stakeholders need to be consulted often. Woolworths is the biggest employer in the country, and they have a large IT department of approximately 2800 employees, a number which is likely only surpassed by large international companies. There are a lot of individuals, who have different ideas and directions, different interests and different motives and responsibilities. This can often cause conflict when different departments want things done in different ways, and the alternatives need to be discussed. Technical discussions may ensue, and some matters need to be escalated. Working with people is a skill that needs to be developed over time, and certainly also a skill not everybody has! </p>
 
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/QluN9GP3hzY" title="YouTube video player" frameborder="0"
-     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/3KGf6naGO64" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     </div>
 
