--- a/meetings_recordings.html
+++ b/meetings_recordings.html
@@ -76,24 +76,41 @@
   accessible below the video recordings </p>
   <hr>
   
-    <p>1st meeting. 26-06-2022. Getting Started. </p>
+    <p>1st meeting. 26-June-2022. Getting Started. </p>
    
     <iframe width="560" height="315" src="https://www.youtube.com/embed/xrP4VXSXDZ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    <p><a href = "documents/meeting1Agenda.pdf"><b>Agenda.pdf</b></a></p>
-    <p><a href = "documents/1st_meetingActions.pdf"><b>Actions.pdf</b></a></p>
+    <p><a href = "documents/meeting1Agenda.pdf"><b>1st Agenda.pdf</b></a></p>
+    <p><a href = "documents/1st_meetingActions.pdf"><b>1st Actions.pdf</b></a></p>
     <hr>
 
-<p>2nd meeting. Plan of the Century</p>
+<p>2nd meeting. 30-June-2022.  Plan of the Century</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/MCQgio1e_QI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <p><a href = "documents/meeting2Agenda.pdf"><b>2nd Agenda.pdf</b></a></p>
+    <p><a href = "documents/2nd_meetingActions.pdf"><b>2nd Actions.pdf</b></a></p>
     <hr>
 
-    <p>3rd meeting. Working it</p>
+    <p>3rd meeting. 05-July-2022 Working it</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/SZAvGQwqmqc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <p><a href = "documents/meeting3Agenda.pdf"><b>3rd Agenda.pdf</b></a></p>
+    <p><a href = "documents/3rd_meetingActions.pdf"><b>3rd Actions.pdf</b></a></p>
     <hr>
 
-    <p>4th meeting, Progressing well.</p>
+    <p>4th meeting, 07-July-2022 Progressing well.</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/EQqzOfTffT0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <p><a href = "documents/meeting4Agenda.pdf"><b>4th Agenda.pdf</b></a></p>
+    <p><a href = "documents/4th_meetingActions.pdf"><b>4th Actions.pdf</b></a></p>
+    <hr>
+
+    <p>5th meeting, 14-July-2022 Final Countdown.</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/U3wFt0CubVM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <p><a href = "documents/meeting5Agenda.pdf"><b>5th Agenda.pdf</b></a></p>
+    <p><a href = "documents/5th_meetingActions.pdf"><b>5th Actions.pdf</b></a></p>
+  
   
     </div>
 
