--- a/IT_tech_cybersecurity_references.html
+++ b/IT_tech_cybersecurity_references.html
@@ -78,7 +78,9 @@
 <!--body class = "main-text"-->
     <div class = "main-text">
 
-        <p><a href = "https://www.wired.com/story/google-free-security-keys-campaigns/">https://www.wired.com/story/google-free-security-keys-campaigns/</a></p>
+        <p>Newman L (2020) Google’s giving out security keys to help protect campaigns, Wired website, accessed 8 July 2022. <a href ="https://www.wired.com/story/google-free-security-keys-campaigns/">https://www.wired.com/story/google-free-security-keys-campaigns/"</a></p>
+
+
         <p><a href = "https://www.youtube.com/watch?v=hGRii5f_uSc">https://www.youtube.com/watch?v=hGRii5f_uSc</a></p>
         <p><a href = "https://www.gartner.com/en/newsroom/press-releases/2021-05-17-gartner-forecasts-worldwide-security-and-risk-managem">https://www.gartner.com/en/newsroom/press-releases/2021-05-17-gartner-forecasts-worldwide-security-and-risk-managem </a></p>
         <p><a href = "https://www.csoonline.com/article/3645091/cybersecurity-spending-trends-for-2022-investing-in-the-future.html" >https://www.csoonline.com/article/3645091/cybersecurity-spending-trends-for-2022-investing-in-the-future.html</p>
