--- a/IT_tech_cybersecurity_references.html
+++ b/IT_tech_cybersecurity_references.html
@@ -80,14 +80,23 @@
 
         <p>Newman L (2020) Google’s giving out security keys to help protect campaigns, Wired website, accessed 8 July 2022. <a href ="https://www.wired.com/story/google-free-security-keys-campaigns/">https://www.wired.com/story/google-free-security-keys-campaigns/"</a></p>
 
+        <p>Scott T (4 August 2020) ‘Why you should turn on two factor authentication’ [video], Tom Scott, YouTube website, accessed 8 July 2022.<a href ="https://www.gartner.com/en/newsroom/press-releases/2021-05-17-gartner-forecasts-worldwide-security-and-risk-managem">https://www.gartner.com/en/newsroom/press-releases/2021-05-17-gartner-forecasts-worldwide-security-and-risk-managem"</a></p>
 
-        <p><a href = "https://www.youtube.com/watch?v=hGRii5f_uSc">https://www.youtube.com/watch?v=hGRii5f_uSc</a></p>
-        <p><a href = "https://www.gartner.com/en/newsroom/press-releases/2021-05-17-gartner-forecasts-worldwide-security-and-risk-managem">https://www.gartner.com/en/newsroom/press-releases/2021-05-17-gartner-forecasts-worldwide-security-and-risk-managem </a></p>
-        <p><a href = "https://www.csoonline.com/article/3645091/cybersecurity-spending-trends-for-2022-investing-in-the-future.html" >https://www.csoonline.com/article/3645091/cybersecurity-spending-trends-for-2022-investing-in-the-future.html</p>
-        <p><a href = "https://www.zdnet.com/article/australian-tech-unicorn-canva-suffers-security-breach/">https://www.zdnet.com/article/australian-tech-unicorn-canva-suffers-security-breach/</a></p>
-        <p><a href = "https://cybersecurityventures.com/cybercrime-damages-6-trillion-by-2021/">https://cybersecurityventures.com/cybercrime-damages-6-trillion-by-2021/ </a></p>
-        <p><a href = "https://theconversation.com/did-the-census-really-suffer-a-denial-of-service-attack-63755">https://theconversation.com/did-the-census-really-suffer-a-denial-of-service-attack-63755 </a></p>
-        <p><a href = "https://cpl.thalesgroup.com/sites/default/files/content/research_reports_white_papers/field_document/2022-05/2022-thales-data-threat-report-emea-edition.pdf">https://cpl.thalesgroup.com/sites/default/files/content/research_reports_white_papers/field_document/2022-05/2022-thales-data-threat-report-emea-edition.pdf </a></p>
+        <p>Gartner (2021) Gartner forecasts worldwide security and risk management spending to exceed $150 billion in 2021, Gartner website, accessed 8 July 2022.<a href ="https://www.wired.com/story/google-free-security-keys-campaigns/">https://www.wired.com/story/google-free-security-keys-campaigns/"</a></p>
+
+        <p>Pratt M (2021) Cybersecurity spending trends for 2022: Investing in the future, CSO website, accessed 8 July 2022.<a href ="https://www.csoonline.com/article/3645091/cybersecurity-spending-trends-for-2022-investing-in-the-future.html">https://www.csoonline.com/article/3645091/cybersecurity-spending-trends-for-2022-investing-in-the-future.html"</a></p>
+
+        <p>Cimpanu C (2019) Australian tech unicorn Canva suffers security breach, ZDNet website, accessed 9 July 2022.<a href ="https://www.zdnet.com/article/australian-tech-unicorn-canva-suffers-security-breach/">https://www.zdnet.com/article/australian-tech-unicorn-canva-suffers-security-breach/"</a></p>
+
+        <p>Morgan S (2020) Cybercrime to cost the world $10.5 trillion annually by 2025, Cybersecurity ventures website, accessed 9 July 2021.<a href ="https://cybersecurityventures.com/cybercrime-damages-6-trillion-by-2021/">https://cybersecurityventures.com/cybercrime-damages-6-trillion-by-2021/"</a></p>
+
+        <p>Johnstone M (10 August 2016) ‘Did the census really suffer a denial-of-service ‘attack’’, The Conversation, accessed 10 July 2021<a href ="https://theconversation.com/did-the-census-really-suffer-a-denial-of-service-attack-63755">https://theconversation.com/did-the-census-really-suffer-a-denial-of-service-attack-63755"</a></p>
+
+        <p>Thales (2022) 2022 Thales data threat report: Navigating data security in an era of hybrid work, ransomware and accelerated cloud transformation, Thales Group website, accessed 10 July 2022.<a href ="https://cpl.thalesgroup.com/sites/default/files/content/research_reports_white_papers/field_document/2022-05/2022-thales-data-threat-report-emea-edition.pdf">https://cpl.thalesgroup.com/sites/default/files/content/research_reports_white_papers/field_document/2022-05/2022-thales-data-threat-report-emea-edition.pdf"</a></p>
+
+
+
+      
 <br>
     </div>
 </body>
