--- a/IT_tech_cybersecurity.html
+++ b/IT_tech_cybersecurity.html
@@ -135,7 +135,8 @@
         <p>Joshua has personally been affected by cybersecurity issues. His family, like most others, frequently receive phishing emails and scam calls. In addition, they were also affected in 2016 when the census was shut down because of a server overload. The Australian Bureau of Statistics claimed that they had experienced a DoS attack, although it is unknown whether the cause of the outage was simply caused by higher-than-expected server load (Johnstone 2016). </p>
 
         <p>The effects of cybersecurity on people’s everyday lives are only getting worse. According to the Thales Data Threat Report (2022:4), 53% of businesses in Europe and the Middle East have suffered cybersecurity breaches at some point, and only 19% said that “they had complete knowledge of where their data is stored”. Because of the rising dangers of cybercrime and security breaches, IT professionals and regular people alike should be on their guard and actively working towards a safer and more secure future. </p>
-<br>
+
+<p><b> <a href = "IT_tech_cybersecurity_references.html">Cyber Security References</a></b></p>
     </div>
 </body>
 <!--footer-->
