--- a/IT_tech_machinelearning.html
+++ b/IT_tech_machinelearning.html
@@ -125,7 +125,7 @@
 
     <p>As for Joshua’s personal life, he believes products like GitHub Copilot have the potential to change things, as someone who is studying with the idea of getting a job as a programmer or software developer. Whether it will be a change for the better or worse, only time will tell. In addition, Joshua’s life will certainly change as a result of the many advances in machine learning outlined above. Joshua’s family and himself will no doubt benefit from the use of machine learning in the medical industry, even if we may not realise it. In addition, our lives will also likely be affected (for better or worse) by the use of machine learning in surveillance, among other things. </p>
 
-
+    <p><b> <a href = "IT_tech_machinelearning_references.html">Machine Learning References</a></b></p>
      <br>
      </div>
     </body>
