--- a/IT_tech_robots_references.html
+++ b/IT_tech_robots_references.html
@@ -67,3 +67,37 @@
 
    </div>
 
+<!-- page heading-->
+    <div class = "main-text">
+        <h2>Machine Learning</h2>
+    <h3>Prepared by: Joshua M<sup>c</sup>Corkell</h3><hr>
+    
+    </div>
+
+<!--main text-->
+<!--body class = "main-text"-->
+    <div class = "main-text">
+
+    <p>BBC (12 March 2016) ‘Artificial intelligence: Google’s AlphaGo beats Go master Lee Se-dol', BBC News, accessed 5 July 2022.<a href ="https://www.bbc.com/news/technology-35785875">https://www.bbc.com/news/technology-35785875"</a></p>
+
+    <p>GitHub (2022) GitHub Copilot, your AI pair programmer, GitHub website, accessed 5 July 2022.<a href = "https://github.com/features/copilot">https://github.com/features/copilot</a></p>
+
+    <p>Gladstone N (4 November 2018) ‘Surveillance state: NSW intensifies citizen tracking’, Sydney Morning Herald, accessed 5 July 2022.<a href = "https://www.smh.com.au/national/nsw/surveillance-state-nsw-intensifies-citizen-tracking-20181019-p50atw.html">https://www.smh.com.au/national/nsw/surveillance-state-nsw-intensifies-citizen-tracking-20181019-p50atw.html </a></p>
+
+  
+
+<br>
+</div>    <!--footer-->
+<footer>
+    <div>
+        <p><a class = "footer" href = "Adam_puckeridge.html">Adam Puckeridge</a> | 
+            <a class = "footer" href = "Aiden_howlett.html">Aiden Howlett</a> | 
+            <a class = "footer" href = "Helen_Andrews.html">Helen Andrews</a> | 
+            <a class = "footer" href = "Joshua_McCorkell.html">Joshua McCorkell</a> | 
+            <a class = "footer" href = "Robert_Longmore.html">Robert Longmore</a> | 
+            <a class = "footer" href = "Sean_De_Chavez.html">Sean De Chavez</a></p>
+        <p><a class = "footer" href ="https://github.com/aidenh37/RMIT-COSC2196-IIT-A2">Github Public Repository</a> | 
+            <a class = "footer" href = "https://aidenh37.github.io/RMIT-COSC2196-IIT-A2">Gitub Website</a></p>
+        © 2022 In Control Totally
+    </div>
+</footer>
