--- a/IT_tech_robots_references.html
+++ b/IT_tech_robots_references.html
@@ -69,8 +69,8 @@
 
 <!-- page heading-->
     <div class = "main-text">
-        <h2>Machine Learning</h2>
-    <h3>Prepared by: Joshua M<sup>c</sup>Corkell</h3><hr>
+        <h2>Robots</h2>
+    <h3>Prepared by: Sean De Chavez</h3><hr>
     
     </div>
 
@@ -91,11 +91,7 @@
     <p>Roser R (2019) The Inner Workings of Amazon Fulfilment Centers – Part 1, AllAboutLean website, accessed 5 July 2022<a href = "https://www.allaboutlean.com/amazon-fulfillment-1/">https://www.allaboutlean.com/amazon-fulfillment-1/</a></p>
 
     <p>Tavares F (2022) Nasa Celebrates Three Years of Astrobees Buzzing on Space Station, NASA website, accessed 5 July 2022<a href = "https://www.nasa.gov/feature/ames/astrobee-3-years">https://www.nasa.gov/feature/ames/astrobee-3-years</a></p>
-
     
-
-  
-
 <br>
 </div>    <!--footer-->
 <footer>
