project references updated
references updated to match document, alphabetised.

--- a/Project_idea_references.html
+++ b/Project_idea_references.html
@@ -81,29 +81,21 @@
 <!--body class = "main-text"-->
     <div class = "main-text">
 
-<p>Crozier, R., 2022. ANZ Plus has a 'halo effect' on the bank. [online] iTnews. Available at: <a href = "https://www.itnews.com.au/news/anz-plus-has-a-halo-effect-on-the-bank-580626">https://www.itnews.com.au/news/anz-plus-has-a-halo-effect-on-the-bank-580626</a> [Accessed 19 June 2022]. </p>
+        <p>Amazon Web Services (n.d.) AWS Pricing Calculator, accessed 13 July 2022.<a href = "https://calculator.aws/ ">https://calculator.aws/ </a></p>
 
-<p>Crozier, R., 2021. ANZ Banking Group tackles risk reporting 'rethink' on Google cloud. [online] iTnews. Available at: <a href = "https://www.itnews.com.au/news/anz-banking-group-tackles-risk-reporting-rethink-on-google-cloud-571192">https://www.itnews.com.au/news/anz-banking-group-tackles-risk-reporting-rethink-on-google-cloud-571192</a> [Accessed 19 June 2022]</p>
+        <p>Apple Developer (n.d.) Enrollment, accessed 13 July 2022.<a href = "https://developer.apple.com/support/enrollment/">https://developer.apple.com/support/enrollment/</a></p>
 
-<p>ANZ. 2022. ANZ Plus, A New Way To Bank. [online] Available at: <a href = "https://www.anz.com.au/plus/">https://www.anz.com.au/plus/</a> [Accessed 19 June 2022]</p>
+        <p>Apple Developer (n.d.) Xcode 14 Overview, accessed 13 July 2022.<a href = "https://developer.apple.com/xcode/">https://developer.apple.com/xcode/</a></p>
 
-<p>Kurian, T., 2019. ANZ accelerates its digital transformation with Google Cloud smart analytics. [online] Google Cloud Blog. Available at: <a href = "https://cloud.google.com/blog/topics/customers/anz-accelerates-its-digital-transformation-with-google-cloud-smart-analytics">https://cloud.google.com/blog/topics/customers/anz-accelerates-its-digital-transformation-with-google-cloud-smart-analytics</a> [Accessed 19 June 2022]. </p>
+        <p>CWANZ (Cycling and Walking Australia and New Zealand) (2021) National Walking and Cycling Participation Survey 2021, CWANZ website, accessed 11 July 2022.<a href = "https://www.cwanz.com.au/national-walking-and-cycling-participation-survey-2021/">https://www.cwanz.com.au/national-walking-and-cycling-participation-survey-2021/</a></p>
 
-<p>Google Cloud. n.d. Up Case Study. [online] Available at: <a href = "https://cloud.google.com/customers/up">https://cloud.google.com/customers/up</a> [Accessed 19 June 2022]. </p>
+        <p>Demchenko M (2020) The best tools for Android software development, ncube website, accessed 13 July 2022.<a href = "https://ncube.com/blog/the-best-tools-for-android-software-development">https://ncube.com/blog/the-best-tools-for-android-software-development</a></p>
 
-<p>Rowland, C., 2018. Digital bank Up launches with Google Pay, fee-free banking and Android app. [online] Ausdroid. Available at: <a href = "https://ausdroid.net/2018/10/31/digital-bank-launches-google-pay-fee-free-banking-android-app/">https://ausdroid.net/2018/10/31/digital-bank-launches-google-pay-fee-free-banking-android-app/</a> [Accessed 19 June 2022]. </p>
+        <p>Google Cloud (n.d.) Google Cloud Pricing Calculator, accessed 13 July 2022.<a href = "https://cloud.google.com/products/calculator/"2>https://cloud.google.com/products/calculator/</a></p>
 
-<p>McCormick, E., 2021. BofA CEO on future of banking: 'We're clearly a technology company'. [online] Yahoo Finance. Available at: <a href = "https://finance.yahoo.com/news/bof-a-ceo-on-future-of-banking-were-clearly-a-technology-company-144208908.html">https://finance.yahoo.com/news/bof-a-ceo-on-future-of-banking-were-clearly-a-technology-company-144208908.html</a>[Accessed 19 June 2022].  </p>
+        <p>Google Play Console Help (n.d.) How to use Play Console, accessed 13 July 2022<a href = "https://support.google.com/googleplay/android-developer/answer/6112435">https://support.google.com/googleplay/android-developer/answer/6112435</a></p>
 
-<p>de Kretser, A., 2022. ANZ gets more tech on board to help transform retail banking. [online] Australian Financial Review. Available at: <a href = "https://www.afr.com/companies/financial-services/anz-gets-more-tech-on-board-20220523-p5anp"2>https://www.afr.com/companies/financial-services/anz-gets-more-tech-on-board-20220523-p5anp</a> [Accessed 19 June 2022]. </p>
-
-<p>Google Maps Help. 2022. Get directions & show routes. [online] Available at: <a href = "https://support.google.com/maps/answer/144339?hl=en&co=GENIE.Platform%3DDesktop">https://support.google.com/maps/answer/144339?hl=en&co=GENIE.Platform%3DDesktop</a> [Accessed 19 June 2022]. </p>
-
-<p>Google Maps Help. 2022. Use layers to find places, traffic, terrain, biking & transit. [online] Available at: <a href = "https://support.google.com/maps/answer/3092439?hl=en&co=GENIE.Platform%3DiOS">https://support.google.com/maps/answer/3092439?hl=en&co=GENIE.Platform%3DiOS</a> [Accessed 19 June 2022]. </p>
-
-<p>PlugShare. 2022. PlugShare - EV Charging Station Map - Find a place to charge. [online] Available at: <a href = "https://www.plugshare.com/"">https://www.plugshare.com/</a> [Accessed 19 June 2022]. </p>
-
-<p>Service NSW. 2022. Live Traffic NSW. [online] Available at: <a href = "https://www.service.nsw.gov.au/transaction/live-traffic-nsw"> https://www.service.nsw.gov.au/transaction/live-traffic-nsw</a>[Accessed 19 June 2022]. </p>
+        <p>Pearson L and Beck B (2022) 3 in 4 people want to ride a bike but are put off by lack of safe lanes, The Conversation website, accessed 11 July 2022<a href = "https://theconversation.com/3-in-4-people-want-to-ride-a-bike-but-are-put-off-by-lack-of-safe-lanes-172868">https://theconversation.com/3-in-4-people-want-to-ride-a-bike-but-are-put-off-by-lack-of-safe-lanes-172868</a></p>
 
 <br>
     </div>
