Updated reference links
added and updated all references links to bottom of page that require referencing

--- a/IT_tech_clouds_servers.html
+++ b/IT_tech_clouds_servers.html
@@ -112,7 +112,7 @@
     <p>Overall, cloud computing has had a major positive impact on society as more is being done on the cloud, enabling organisations to welcome the technology into their environments. Today, cloud computing technology is truly synonymous with the internet. </p>
 
     <p>Cloud computing technology is already affecting Sean’s daily life in unexpected ways – he realises that he uses cloud-based apps such as Gmail and Twitter almost daily, and even this report was written with the help of the technology. Sean’s family and friends also use and communicate via cloud-based apps daily. Cloud computing is already an integral part of everyday life and improvements in the technology will serve to enhance Sean’s quality of life. </p>
-
+    <p><b><a href = "IT_tech_clouds_references.html">Clouds, Services and Servers References</a></b></p>
         
      <br>
      </div>
