--- a/IT_tech_robots.html
+++ b/IT_tech_robots.html
@@ -136,6 +136,8 @@
 
             <p>Researching this topic has piqued Sean’s interest in robots and he will be keeping an eye on future robotics developments through the IEEE magazine. He will also be keeping a lookout for any examples at work as Sean works in veterinary pharmaceuticals, where most warehouse processes are manually performed due to the extremely fragile nature of the product. As Sean’s father is a mechanical engineer, and his mother an electrical engineer, albeit non-practising, he may be able to convince them to purchase a robot vacuum cleaner should the existing vacuum cleaner break down, as this is an excellent example of robotics reducing in price and becoming an accessible technology. </p>
 
+            <p><b><a href = "IT_tech_robots_references.html">Robots References</a></b></p>
+
      <br>
      </div>
     </body>
