--- a/Industry_data.html
+++ b/Industry_data.html
@@ -80,7 +80,7 @@
     <div class = "main-text">
         <figure class = "figure-style-40">
             <img src="images/Pie.png" align="right" width="100%">
-            <figcaption>Figure 1: Labour Insight Jobs (Burning Glass Technologies) </figcaption>
+            <figcaption>Labour Insight Jobs (Burning Glass Technologies) </figcaption>
         </figure>
         
         <p><b>Ideal Jobs</b></p>
@@ -121,7 +121,7 @@
 
         <figure class = "figure-style-40">
             <img src="images/ITspecific.png" align="right" width="100%">
-            <figcaption>waiting confirmation</figcaption>
+            <figcaption>Labour Insight Jobs (Burning Glass Technologies) </figcaption>
         </figure>
 
         <ul>
@@ -146,7 +146,7 @@
         <p>Cybersecurity, helpdesk and AI engineering experience are three of the highest-ranked IT-specific skills not in our required skill set. For example, cybersecurity experience is most in demand from jobs such as CISO, Cybersecurity Engineer or Penetration Tester, as these positions require knowledge of maintaining information security and risk management as well as strong knowledge in networking, and encryption techniques. Whereas AI engineering is more in demand for positions such as Data Scientists and Machine Learning Engineer where the position requires optimising customer experiences</p>
         <figure class = "figure-style-40">
             <img src="images/generalskills.png" align="right" width="100%">
-            <figcaption>waiting confirmation</figcaption>
+            <figcaption>Labour Insight Jobs (Burning Glass Technologies) </figcaption>
         </figure>       
 <br>
 <br>
@@ -155,7 +155,9 @@
         <p>Creativity, organisation, and perseverance personality traits are three of the highest-ranked general requirements not in our skill set. For example, organisation and perseverance qualities are most in demand from positions such as helpdesk support. Whereas creativity is essential in positions such as Graphic Designer. </p>
 
         <p><b>Helen’s opinion after a review of the data </b></p>
-        <p>Reviewing the data from Burning Glass has not changed my mind regarding the career path I have chosen. Analysing the data has allowed me to conclude that I have chosen the appropriate career choice for my skill set and has allowed me to bring attention to areas of soft skills which would require my focus. </p>     
+        <p>Reviewing the data from Burning Glass has not changed my mind regarding the career path I have chosen. Analysing the data has allowed me to conclude that I have chosen the appropriate career choice for my skill set and has allowed me to bring attention to areas of soft skills which would require my focus. </p>  
+        
+        <p><b><a href = "Industry_data_references.html">Industry Data References</a></b></p>
         <br>
     </div>
 </body>
