--- a/Project_idea.html
+++ b/Project_idea.html
@@ -195,6 +195,8 @@ A searchable database of bicycle lanes with crowdsourced condition updates would
 
 <p>The desired outcome of this application is an increased uptake of commuter cycling, as this application can help mitigate many of the problems associated with cycling. It will also bring a greater sense of safety given to users of the application, as they would be more likely to be aware of hazards ahead of time. In addition, they will have the opportunity to be able to plan their cycling commutes with a greater degree of certainty more comparable to travelling by car or public transport. The data provided by users of the application could also be utilised by those who maintain and upgrade the infrastructure to provide a higher quality of service to bicycle riders comparable to that experienced by motorists.  </p>
 
+<p><b><a href = "Project_idea_references.html">Project Idea References</a></b></p>
+
 
 <br>
     </div>
