it work updated
added reference to it work page

--- a/IT_work.html
+++ b/IT_work.html
@@ -106,6 +106,9 @@
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/3KGf6naGO64" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+    <p>References.</p>
+    <p>Pash C (31 July 2019) ‘Why Woolworths wants to be a media business and run its own advertising arm’, AdNews, accessed 14 July 2022<a href ="https://www.adnews.com.au/news/why-woolworths-wants-to-be-a-media-business-and-run-its-own-advertising-arm">https://www.adnews.com.au/news/why-woolworths-wants-to-be-a-media-business-and-run-its-own-advertising-arm"</a></p>
+
     </div>
 
 <!--main text-->
