--- a/Industry_data_references.html
+++ b/Industry_data_references.html
@@ -71,14 +71,13 @@
     
     </div>
 
-
-
 <!-- referecnes links-->
 <!--body class = "main-text"-->
     <div class = "main-text">
+        <p>CompTIA (n.d.), 10 Skills You Didn't Know Could Land You an IT Job, CompTIA website, accessed 9 July 2022.<a href = "https://www.comptia.org/career-change/exploring-it/skills-for-it">https://www.comptia.org/career-change/exploring-it/skills-for-it</a></p>
 
-        <p><a href = "https://resources.workable.com/full-stack-developer-job-description">https://resources.workable.com/full-stack-developer-job-description </a></p>
-        <p><a href = "https://www.seek.com.au/career-advice/role/sales-and-business-development-manager">https://www.seek.com.au/career-advice/role/sales-and-business-development-manager </a> </a></p>
+        <p>Seek (n.d.), Homepage, Seek, accessed 9 July 2022<a href = "https://www.seek.com.au/">https://www.seek.com.au/</a></p>
+
 <br>
     </div>
 </body>
