--- a/Industry_data.html
+++ b/Industry_data.html
@@ -80,7 +80,7 @@
     <div class = "main-text">
         <figure class = "figure-style-40">
             <img src="images/Pie.png" align="right" width="100%">
-            <figcaption>Labour Insight Jobs (Burning Glass Technologies) </figcaption>
+            <figcaption>Figure 1: Labour Insight Jobs (Burning Glass Technologies) </figcaption>
         </figure>
         
         <p><b>Ideal Jobs</b></p>
@@ -121,7 +121,7 @@
 
         <figure class = "figure-style-40">
             <img src="images/ITspecific.png" align="right" width="100%">
-            <figcaption>Labour Insight Jobs (Burning Glass Technologies) </figcaption>
+            <figcaption>Figure 2: Seek (n.d.), Homepage, Seek, accessed 9 July 2022. https://www.seek.com.au/ </figcaption>
         </figure>
 
         <ul>
@@ -146,7 +146,7 @@
         <p>Cybersecurity, helpdesk and AI engineering experience are three of the highest-ranked IT-specific skills not in our required skill set. For example, cybersecurity experience is most in demand from jobs such as CISO, Cybersecurity Engineer or Penetration Tester, as these positions require knowledge of maintaining information security and risk management as well as strong knowledge in networking, and encryption techniques. Whereas AI engineering is more in demand for positions such as Data Scientists and Machine Learning Engineer where the position requires optimising customer experiences</p>
         <figure class = "figure-style-40">
             <img src="images/generalskills.png" align="right" width="100%">
-            <figcaption>Labour Insight Jobs (Burning Glass Technologies) </figcaption>
+            <figcaption>Figure 3: Seek (n.d.), Homepage, Seek, accessed 9 July 2022. https://www.seek.com.au/ </figcaption>
         </figure>       
 <br>
 <br>
