--- a/index.html
+++ b/index.html
@@ -73,25 +73,34 @@
 <div class = "main-text">
 
         <h2>In Control, Totally </h2>
-  <h3>Prepared by: Adam Puckeridge, Aiden Howlett, Helen Andrews, Joshua McCorkell, Robert Longmore and Sean De Chavez </h3>
+  <p>Prepared by: Adam Puckeridge, Aiden Howlett, Helen Andrews, Joshua McCorkell, Robert Longmore and Sean De Chavez </p>
+  <hr>
 
 
 </div>
-  <img src = "images/Cyclopedia_2.png" alt = "Cyclopedia logo" class = "main-text" style = "width:350px;height:300px;">
+  <!--img src = "images/Cyclopedia_2.png" alt = "Cyclopedia logo" class = "main-text" style = "width:350px;height:300px;"-->
 
   <div class = "main-text">
+    <figure class = "figure-style-40">
+        <img src="images/Cyclopedia_2.png" align="right" width="100%">
+        <figcaption>Cyclopedia Application Logo Design </figcaption>
+    </figure>
 
+     <h2>A Group Profile:</h2> 
+     <p>Individual profiles can be found in the Team profile links above. The individual page contains links to our individual profile websites, Email and personality profile data.<br>
+
+         <p>This information could be helpful to the group because it can increase our understanding of each other and help us achieve clear and effective communication. This understanding of each other is important as before now we have never met each other and being able to work together efficiently as a group is one of the most important parts of success in this assignment. </p>
+     </p>
+
+
+     <h3>Website Prepared by : Robert Longmore</h3>
      <h3><a href = "https://github.com/aidenh37/RMIT-COSC2196-IIT-A2">GitHub Repository</a></h3>
 
      <h3><a href = "https://aidenh37.github.io/RMIT-COSC2196-IIT-A2">GitHub Website</a></h3>
+     <hr>
+     
 
-     <h3>Website Prepared by : Robert Longmore</h3>
-
-     <h2>A Group Profile:</h2> 
-     <p>Individual profiles can be found in the Team profile links above.
-         This information could be helpful to the group because it can increase our understanding of each other and help us achieve clear and effective communication. This understanding of each other is important as before now we have never met each other and being able to work together efficiently as a group is one of the most important parts of success in this assignment. 
-     </p>
-
+    
   </div>
 <!--footer-->
 <footer>
