--- a/index.html
+++ b/index.html
@@ -126,13 +126,17 @@
 <p>waiting content</p>
 <hr>
 
-<h3>Aiden</h3>
-    <p>Despite a bumpy start due to an overlap with an Introduction to Programming assessment allotted only the first week of this assessment time to complete, and some delay in organising our group and meeting for the first time, we quickly gathered steam and worked efficiently and to plan. It did, however, take several meetings before this plan was put in place, as none of our group members have participated in a group report project previously.</p> 
 
+
+<h3>Aiden</h3>
+<img src="images/aidenhowlett.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Aiden Howlett" style="width:250px;height:250px;">
+    <p>Despite a bumpy start due to an overlap with an Introduction to Programming assessment allotted only the first week of this assessment time to complete, and some delay in organising our group and meeting for the first time, we quickly gathered steam and worked efficiently and to plan. It did, however, take several meetings before this plan was put in place, as none of our group members have participated in a group report project previously.</p> 
+    
     <p>Aiden believes he could have expanded more on the group’s Project Idea with time, by researching the demand for crowdsourced data by local governments, and perhaps expanding on the financial feasibility of the project with estimated operating revenue and more expense analysis. He also believes the group far surpassed his effort, as most of this document was authored by other group members. It should be noted Aiden prepared the majority of the meeting notes, conducted the interview with Sally Longmore, and also contributed by reviewing and editing the group’s work before final submission. </p>
     <hr>
 
 <h3>Helen</h3>
+<img src="images/Helenandrews.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Helen Andrews"  style="width:240px;height:250px;">
     <p>During the 3-4 weeks we worked together as a group we were able to achieve the assignment by the due date. This is encouraging as we had good communication and were able to meet regularly to check in on the group's progress and provide assistance where required.</p> 
 
     <p>Our group as a whole is quite good and worked well as a team to finalise the project. In future we could improve on how we plan the assignment and due dates for tasks. Setting dates to manage the project ensures everyone involved in the group knows what expectations we have and the target date for review we are set to achieve.</p> 
@@ -143,12 +147,14 @@
     <hr>
 
 <h3>Joshua</h3>
+<img src="images/joshuamccorkell.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Joshua McCorkell"  style="width:225px;height:250px;">
         <p>Overall, our work as a group has been good in my opinion. One of the most important things that went well was work division. I believe we did a good job of making each person’s responsibilities clear. We also succeeded, in my opinion, in supporting and helping each other to complete the required work in a reasonable time frame, despite losing some time early on. Something we didn’t do, however, was set internal deadlines. This is something that I believe we would benefit from in the future, as we would have benefited from completing some of the tasks earlier.</p>  
 
        <p>Something that surprised me about working in a group was the range of ages and backgrounds that were represented in our group. This is something that is somewhat different from an in-person university experience and is something that I believe has been to our benefit. One thing I have learned about working in groups is that it is important to make sure we are all on the same page about the deadlines that need to be met, and the work that is required of each member. I believe we did a reasonable job of this. However, if either of these are lacking, then the work of the group could easily devolve into an unorganized mess of confused and half-finished work. </p>
        <hr>
 
     <h3>Robert</h3>
+    <img src="images/roblongmore.jpg" align="right" hspace="10" vspace = '10' width="30%" alt="Bad landing"  style="width:250px;height:250px;">
         <p>Initially, we were unsure, and as a new team, took a while to understand each other, but this was quickly overcome with the division of workload amongst us, and allowing us to focus on what we wanted to learn, or work to our strengths.</p> 
 
         <p>This division of work early on allowed each team member to focus on a set target, while learning the processes of running meetings, and planning the next steps. A meeting timetable was set with the consensus of all participants to ensure max availability for each member. Whilst our meeting schedule was met, and punctual, our meeting agendas were a bit lacking. Setting internal deadlines was also lacking, but the division of work early, and understanding what was required from each participant, negated any negative impacts.</p>  
