--- a/meetings_recordings.html
+++ b/meetings_recordings.html
@@ -80,36 +80,38 @@
   
     <p>1st meeting. 26-June-2022. Getting Started. </p>
    
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/xrP4VXSXDZ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+    <p> <a href = "https://rmiteduau.sharepoint.com/sites/IITA2Group22/Shared%20Documents/General/Recordings/1st%20Weekly%20Meeting%20-%20_Getting%20Started_%20-%20IIT%20Assessment%202%20Group%202-20220626_180158-Meeting%20Recording.mp4"><b>Meeting 1 recording</b> </a></p>
     <p><a href = "documents/meeting1Agenda.pdf"><b>1st Agenda.pdf</b></a></p>
     <p><a href = "documents/1st_meetingActions.pdf"><b>1st Actions.pdf</b></a></p>
     <hr>
 
 <p>2nd meeting. 30-June-2022.  Plan of the Century</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/MCQgio1e_QI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+    <p><a href = "https://rmiteduau.sharepoint.com/sites/IITA2Group22/Shared%20Documents/General/Recordings/2nd%20Meeting%20-%20_The%20Plan%20of%20the%20Century_%20-%20IIT%20Assessment%202%20Group%202-20220630_191018-Meeting%20Recording.mp4"><b>Meeting 2 recording</b></a></p>
     <p><a href = "documents/meeting2Agenda.pdf"><b>2nd Agenda.pdf</b></a></p>
     <p><a href = "documents/2nd_meetingActions.pdf"><b>2nd Actions.pdf</b></a></p>
     <hr>
 
     <p>3rd meeting. 05-July-2022 Working it</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/SZAvGQwqmqc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+    
+    <p><a href = "https://rmiteduau.sharepoint.com/sites/IITA2Group22/Shared%20Documents/General/Recordings/3rd%20Meeting%20-%20Tuesday%205th%20July%202022.mp4"><b>Meeting 3 recording</b></a></p>
     <p><a href = "documents/meeting3Agenda.pdf"><b>3rd Agenda.pdf</b></a></p>
     <p><a href = "documents/3rd_meetingActions.pdf"><b>3rd Actions.pdf</b></a></p>
     <hr>
 
     <p>4th meeting, 07-July-2022 Progressing well.</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/EQqzOfTffT0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+    <p><a href = "https://rmiteduau.sharepoint.com/sites/IITA2Group22/Shared%20Documents/General/Recordings/4th%20Meeting%20-%20"><b>Meeting 4 recording</b></a></p>
     <p><a href = "documents/meeting4Agenda.pdf"><b>4th Agenda.pdf</b></a></p>
     <p><a href = "documents/4th_meetingActions.pdf"><b>4th Actions.pdf</b></a></p>
     <hr>
 
-    <p>5th meeting, 14-July-2022 Final Countdown.</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/U3wFt0CubVM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p>5th meeting, 12-July-2022 The Countdown.</p>
+    <p><a href = "https://rmiteduau.sharepoint.com/sites/IITA2Group22/Shared%20Documents/General/Recordings/4th%20Meeting%20-%20"><b>Meeting 5 recording</b></a></p>
+    <p><a href = "documents/meeting5Agenda.pdf"><b>5th Agenda.pdf</b></a></p>
+    <p><a href = "documents/5th_meetingActions.pdf"><b>5th Actions.pdf</b></a></p>
 
+    <hr>
+    <p>6th meeting, 14-July-2022 Final Countdown.</p>
+   <p><a href = "https://rmiteduau.sharepoint.com/sites/IITA2Group22/Shared%20Documents/General/Recordings/Meeting%20in%20_General_-20220714_201206-Meeting%20Recording.mp4"><b>Meeting 6 recording</b></a></p>
     <p><a href = "documents/meeting5Agenda.pdf"><b>5th Agenda.pdf</b></a></p>
     <p><a href = "documents/5th_meetingActions.pdf"><b>5th Actions.pdf</b></a></p>
   
