updated home page,
added Adam and Sean pic

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 <h3>Reflection</h3>
 
 <h3>Adam</h3>
+<img src="images/adamuckeridge.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Adam Puckeridge" style="width:225px;height:250px;">
 <p>I think all members of the group worked well together, we all have similarities and differences that combined well so we could complete the tasks that we assigned each other to a high standard.</p>
 
     <p>We all attended each group meeting and contributed as much as we needed. (with the exception of myself for the first week as I had the flu).</p>
@@ -173,6 +174,7 @@
         <hr>
 
     <h3>Sean</h3>
+    <img src="images/seanDechavez.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Sean De Chavez"  style="width:150px;height:250px;">
         <p>Despite my initial anxiety regarding group work at the start of the unit I believe our group work went well and I am looking forward to working with them again on the next assignment! No member had an ego and despite everyone being on the introvert side we communicated well using Microsoft Teams posts. Every member understood their individual responsibilities and came through with doing their part of the group work and as such we got the report done without any internal disputes.</p> 
 
         <p>Things that could’ve gone better were internal deadlines, we could’ve set and enforced internal deadlines but as every member knew and understood and finished their parts any potential issues that might’ve arose from a lack of internal deadlines was mitigated.</p> 
