--- a/meetings_recordings.html
+++ b/meetings_recordings.html
@@ -99,7 +99,7 @@
     <hr>
 
     <p>4th meeting, 07-July-2022 Progressing well.</p>
-    <p><a href = "https://rmiteduau.sharepoint.com/sites/IITA2Group22/Shared%20Documents/General/Recordings/4th%20Meeting%20-%20"><b>Meeting 4 recording</b></a></p>
+    <p><a href = "https://rmiteduau.sharepoint.com/sites/IITA2Group22/Shared%20Documents/Forms/AllItems.aspx?FolderCTID=0x012000B3CD3F6C6649734B8E2ABB40FAD24BA9&id=%2Fsites%2FIITA2Group22%2FShared%20Documents%2FGeneral%2FRecordings%2F4th%20Meeting%20%2D%20%E2%80%9CEverything%20is%20Awesome%E2%80%9D%20%2D%20IIT%20Assessment%202%20Group%202%2D20220707%5F190200%2DMeeting%20Recording%2Emp4&parent=%2Fsites%2FIITA2Group22%2FShared%20Documents%2FGeneral%2FRecordings"><b>Meeting 4 recording</b></a></p>
     <p><a href = "documents/meeting4Agenda.pdf"><b>4th Agenda.pdf</b></a></p>
     <p><a href = "documents/4th_meetingActions.pdf"><b>4th Actions.pdf</b></a></p>
     <hr>
