updated industry data
fixed spelling error in IT specific graph

--- a/Industry_data.html
+++ b/Industry_data.html
@@ -120,7 +120,7 @@
         <p><b>IT-specific skills that are consistent across the career paths include:</b></p>
 
         <figure class = "figure-style-40">
-            <img src="images/ITspecific.png" align="right" width="100%">
+            <img src="images/IT_specific.png" align="right" width="100%">
             <figcaption>Figure 2: Seek (n.d.), Homepage, Seek, accessed 9 July 2022. https://www.seek.com.au/ </figcaption>
         </figure>
 
