--- a/meetings_recordings.html
+++ b/meetings_recordings.html
@@ -69,7 +69,7 @@
 <!-- page heading-->
     <div class = "main-text">
         <h2>Meetings and recordings</h2>
-    <h3>In Control, Totally; work group meeting recordings. </h3>
+    <h3>In Control, Totally: work group meeting recordings </h3>
     <hr>
 <!--horizontal line-->
 
@@ -78,44 +78,44 @@
   accessible below the video recordings </p>
   <hr>
   
-    <p>1st meeting. 26-June-2022. Getting Started. </p>
+    <p>1st meeting. 26-June-2022. "Getting Started" </p>
    
     <p> <a href = "https://rmiteduau.sharepoint.com/sites/IITA2Group22/Shared%20Documents/General/Recordings/1st%20Weekly%20Meeting%20-%20_Getting%20Started_%20-%20IIT%20Assessment%202%20Group%202-20220626_180158-Meeting%20Recording.mp4"><b>Meeting 1 recording</b> </a></p>
     <p><a href = "documents/meeting1Agenda.pdf"><b>1st Agenda.pdf</b></a></p>
     <p><a href = "documents/1st_meetingActions.pdf"><b>1st Actions.pdf</b></a></p>
     <hr>
 
-<p>2nd meeting. 30-June-2022.  Plan of the Century</p>
+<p>2nd meeting. 30-June-2022.  "Plan of the Century"</p>
     <p><a href = "https://rmiteduau.sharepoint.com/sites/IITA2Group22/Shared%20Documents/General/Recordings/2nd%20Meeting%20-%20_The%20Plan%20of%20the%20Century_%20-%20IIT%20Assessment%202%20Group%202-20220630_191018-Meeting%20Recording.mp4"><b>Meeting 2 recording</b></a></p>
     <p><a href = "documents/meeting2Agenda.pdf"><b>2nd Agenda.pdf</b></a></p>
     <p><a href = "documents/2nd_meetingActions.pdf"><b>2nd Actions.pdf</b></a></p>
     <hr>
 
-    <p>3rd meeting. 05-July-2022 Working it</p>
+    <p>3rd meeting. 05-July-2022 "Taco Tuesday Catchup"</p>
     
     <p><a href = "https://rmiteduau.sharepoint.com/sites/IITA2Group22/Shared%20Documents/General/Recordings/3rd%20Meeting%20-%20Tuesday%205th%20July%202022.mp4"><b>Meeting 3 recording</b></a></p>
     <p><a href = "documents/meeting3Agenda.pdf"><b>3rd Agenda.pdf</b></a></p>
     <p><a href = "documents/3rd_meetingActions.pdf"><b>3rd Actions.pdf</b></a></p>
     <hr>
 
-    <p>4th meeting, 07-July-2022 Progressing well.</p>
+    <p>4th meeting, 07-July-2022 "Everything is Awesome"</p>
     <p><a href = "https://rmiteduau.sharepoint.com/sites/IITA2Group22/Shared%20Documents/Forms/AllItems.aspx?FolderCTID=0x012000B3CD3F6C6649734B8E2ABB40FAD24BA9&id=%2Fsites%2FIITA2Group22%2FShared%20Documents%2FGeneral%2FRecordings%2F4th%20Meeting%20%2D%20%E2%80%9CEverything%20is%20Awesome%E2%80%9D%20%2D%20IIT%20Assessment%202%20Group%202%2D20220707%5F190200%2DMeeting%20Recording%2Emp4&parent=%2Fsites%2FIITA2Group22%2FShared%20Documents%2FGeneral%2FRecordings"><b>Meeting 4 recording</b></a></p>
     <p><a href = "documents/meeting4Agenda.pdf"><b>4th Agenda.pdf</b></a></p>
     <p><a href = "documents/4th_meetingActions.pdf"><b>4th Actions.pdf</b></a></p>
     <hr>
 
-    <p>5th meeting, 12-July-2022 The Countdown.</p>
+    <p>5th meeting, 12-July-2022 "The Interview"</p>
     <p><a href = "https://rmiteduau-my.sharepoint.com/personal/s3962116_student_rmit_edu_au/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Fs3962116%5Fstudent%5Frmit%5Fedu%5Fau%2FDocuments%2FRecordings%2F5th%20Meeting%20%2D%20%5FThe%20Interview%5F%20%2D%20IIT%20Assessment%202%20Group%202%2D20220712%5F195921%2DMeeting%20Recording%2Emp4&parent=%2Fpersonal%2Fs3962116%5Fstudent%5Frmit%5Fedu%5Fau%2FDocuments%2FRecordings&ga=1"><b>Meeting 5 recording</b></a></p>
     <p><a href = "documents/meeting5Agenda.pdf"><b>5th Agenda.pdf</b></a></p>
     <p><a href = "documents/5th_meetingActions.pdf"><b>5th Actions.pdf</b></a></p>
 
     <hr>
-    <p>6th meeting, 14-July-2022 Final Countdown.</p>
+    <p>6th meeting, 14-July-2022 "The Final Countdown"</p>
    <p><a href = "https://rmiteduau.sharepoint.com/sites/IITA2Group22/Shared%20Documents/General/Recordings/Meeting%20in%20_General_-20220714_201206-Meeting%20Recording.mp4"><b>Meeting 6 recording</b></a></p>
     <p><a href = "documents/meeting6Agenda.pdf"><b>6th Agenda.pdf</b></a></p>
     <p><a href = "documents/6th_meetingActions.pdf"><b>6th Actions.pdf</b></a></p>
   <hr>
-    <p>7th meeting, 18-July-2022 General discussion.</p>
+    <p>7th meeting, 18-July-2022 "General""</p>
     <p><a href = "https://rmiteduau.sharepoint.com/sites/IITA2Group22/Shared%20Documents/General/Recordings/Meeting%20in%20_General_-20220718_183150-Meeting%20Recording.mp4"><b>Meeting 7 recording</b></a></p>
      <p><a href = "documents/meeting7Agenda.pdf"><b>7th Agenda.pdf</b></a></p>
      <p><a href = "documents/7th_meetingActions.pdf"><b>7th Actions.pdf</b></a></p>
