--- a/IT_tech_clouds_servers.html
+++ b/IT_tech_clouds_servers.html
@@ -97,7 +97,7 @@
 
     <p>AWS data centres employ many preventative measures, such as emergency power backups and regular maintenance, to maintain an uptime of 99.99%. Amazon Web Services also implement tough security measures to protect the data of its customers, by using multiple forms of multi-factor authentication, 24-hour on-site security, video surveillance, alarms and various other procedures and protocols to ensure workers and visitors are where they should be and out of where they shouldn’t be (AWS n.d.). </p>
 
-    <figure class = "figure-style-40">
+    <figure class = "figure-style ">
         <img src="images/solardata.jpg" width="100%" alt="Amazon robot">
             <figcaption>USACE photo by Tracy Robillard.(CC BY 2.0)<a href = "https://www.flickr.com/photos/savannahcorps/8047335675/in/photolist-dg7GwP-bJb3s8-bJbfAe-bJb1f4-bJaZHF-bvgpAy-bvghMA-bJb47P-bvgezU-bvgp21-bJb3MP-bJbcXB-bvgq7w-bvgfwj-bJbe4k-bJbdqa-axsNxB-axsNpM-axsNB4-axvuRm-axsNLM-axvv4N-bJb4Fx-bvghrw-bJb1KR-bvgsk1-bvgrS3-bJaZdn-bvgri5-2ntvQnc-5Z2mvw-9DYvRx-81DnSE-6Z7pLB-81Don1-81AeVt-81Ae5a-81AecP-dg7FWn-81DocA-81Do1G-dg7HGJ-dg7G88-dg7Jx3-dg7GQB-soYCtJ-dg7Fqv-2ntuBDM-2ntuBuR-2ntvQHd"> Solar farm on data centre.</a></figcaption>
     </figure>
